--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -3,4 +3,5 @@
 {% block main %}
     <h1>بسم الله الرحمن الرحيم</h1>
     <p>الحمد لله رب العالمين الحمد لله الذي علم الإنسان مالم يعلم</p>
+    <p>الحمد لله رب العالمين الحمد لله الذي علم الإنسان مالم يعلم</p>
 {% endblock main %}
